--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "0.0.1",
   "description": "A template for building Electron apps with React.",
   "author": "Mark <mark@remarkablemark.org>",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron main.js"
+  },
   "keywords": [
     "electron",
     "react",
     "template"
   ],
+  "devDependencies": {
+    "electron-debug": "^0.7.0",
+    "electron-prebuilt": "^0.37.2"
+  },
   "license": "MIT"
 }
