--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "react",
     "template"
   ],
+  "dependencies": {
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
+  },
   "devDependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "electron-debug": "^0.7.0",
-    "electron-prebuilt": "^0.37.2"
+    "electron-prebuilt": "^0.37.2",
+    "webpack": "^1.13.0"
   },
   "license": "MIT"
 }
