--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Mark <mark@remarkablemark.org>",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "webpack && electron main.js"
   },
   "keywords": [
     "electron",
