Add webpack dev config and enable hot module replacement (hmr)
- Update script in `app/index.html` to use base url from webpack
  dev server.
- Update npm run scripts to separate the commands to run electron
  and hmr (`npm start` now consolidates both).

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Mark <mark@remarkablemark.org>",
   "main": "main.js",
   "scripts": {
-    "start": "webpack && electron main.js"
+    "start": "npm run hmr & npm run electron",
+    "electron": "electron main.js",
+    "hmr": "webpack-dev-server --config webpack.development.config.js"
   },
   "keywords": [
     "electron",
