Fix script src in production and update npm scripts
- Change `npm start` that builds production webpack and runs
  electron in production.
- Add `npm run dev` that runs HMR and electron in development.
- Fix the script src in `index.html` to differentiate between
  development (points to webpack-dev-server url) and production
  (points to production build file).

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Mark <mark@remarkablemark.org>",
   "main": "main.js",
   "scripts": {
-    "start": "npm run hmr & npm run electron",
+    "start": "webpack && NODE_ENV=production npm run electron",
+    "dev": "npm run hmr & NODE_ENV=development npm run electron",
     "electron": "electron main.js",
     "hmr": "webpack-dev-server --config webpack.development.config.js"
   },
