--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "react-dom": "^15.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "electron-debug": "^0.7.0",
     "electron-prebuilt": "^0.37.2",
